# CPSC599-Final

./: augmentation.py  board_localizer.py  fen_generator.py  fen_results.csv  pyproject.toml  test.py
src/: augmentation.py  board_localizer.py  datasets.py  per-square_classifier.py  piece_classifier.py  piece_name_mapping.py  screenshot_augmentation.py  test.py  utils.py
