[project]
name = "chessvision"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Huan",email = "Arthur-Huan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=1.24,<2.0)",
    "scikit-image (>=0.21.0,<1.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "torch (>=2.1.0,<3.0.0)",
    "torchvision (>=0.16.0,<1.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
